@@ -968,6 +968,20 @@ begin_import
 import|import
 name|org
 operator|.
+name|apache
+operator|.
+name|zookeeper
+operator|.
+name|data
+operator|.
+name|Stat
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
 name|junit
 operator|.
 name|Before
@@ -2562,6 +2576,189 @@ name|coresStatus
 operator|.
 name|size
 argument_list|()
+argument_list|)
+expr_stmt|;
+comment|// Test Creating a collection with new stateformat.
+name|String
+name|collectionName
+init|=
+literal|"solrj_newstateformat"
+decl_stmt|;
+name|createCollectionRequest
+operator|=
+operator|new
+name|CollectionAdminRequest
+operator|.
+name|Create
+argument_list|()
+expr_stmt|;
+name|createCollectionRequest
+operator|.
+name|setCollectionName
+argument_list|(
+name|collectionName
+argument_list|)
+expr_stmt|;
+name|createCollectionRequest
+operator|.
+name|setNumShards
+argument_list|(
+literal|2
+argument_list|)
+expr_stmt|;
+name|createCollectionRequest
+operator|.
+name|setConfigName
+argument_list|(
+literal|"conf1"
+argument_list|)
+expr_stmt|;
+name|createCollectionRequest
+operator|.
+name|setStateFormat
+argument_list|(
+literal|2
+argument_list|)
+expr_stmt|;
+name|response
+operator|=
+name|createCollectionRequest
+operator|.
+name|process
+argument_list|(
+name|server
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|0
+argument_list|,
+name|response
+operator|.
+name|getStatus
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+name|response
+operator|.
+name|isSuccess
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|CollectionAdminRequest
+name|requestStatusRequest
+init|=
+operator|new
+name|CollectionAdminRequest
+operator|.
+name|RequestStatus
+argument_list|()
+decl_stmt|;
+name|requestStatusRequest
+operator|.
+name|setCollectionName
+argument_list|(
+name|collectionName
+argument_list|)
+expr_stmt|;
+name|waitForRecoveriesToFinish
+argument_list|(
+name|collectionName
+argument_list|,
+literal|false
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+literal|"Collection state does not exist"
+argument_list|,
+name|cloudClient
+operator|.
+name|getZkStateReader
+argument_list|()
+operator|.
+name|getZkClient
+argument_list|()
+operator|.
+name|exists
+argument_list|(
+name|ZkStateReader
+operator|.
+name|getCollectionPath
+argument_list|(
+name|collectionName
+argument_list|)
+argument_list|,
+literal|true
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|Stat
+name|stat
+init|=
+operator|new
+name|Stat
+argument_list|()
+decl_stmt|;
+name|ClusterState
+name|clusterState
+init|=
+name|cloudClient
+operator|.
+name|getZkStateReader
+argument_list|()
+operator|.
+name|getClusterState
+argument_list|()
+decl_stmt|;
+name|assertEquals
+argument_list|(
+literal|"The zkversion of the nodes must be same zkver:"
+operator|+
+name|stat
+operator|.
+name|getVersion
+argument_list|()
+argument_list|,
+name|stat
+operator|.
+name|getVersion
+argument_list|()
+argument_list|,
+name|clusterState
+operator|.
+name|getCollection
+argument_list|(
+name|collectionName
+argument_list|)
+operator|.
+name|getZNodeVersion
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+literal|"DocCollection#getStateFormat() must be> 1"
+argument_list|,
+name|cloudClient
+operator|.
+name|getZkStateReader
+argument_list|()
+operator|.
+name|getClusterState
+argument_list|()
+operator|.
+name|getCollection
+argument_list|(
+name|collectionName
+argument_list|)
+operator|.
+name|getStateFormat
+argument_list|()
+operator|>
+literal|1
 argument_list|)
 expr_stmt|;
 name|CollectionAdminRequest
