@@ -22,68 +22,6 @@ end_package
 
 begin_import
 import|import
-name|java
-operator|.
-name|io
-operator|.
-name|IOException
-import|;
-end_import
-
-begin_import
-import|import
-name|java
-operator|.
-name|util
-operator|.
-name|Collection
-import|;
-end_import
-
-begin_import
-import|import
-name|java
-operator|.
-name|util
-operator|.
-name|Iterator
-import|;
-end_import
-
-begin_import
-import|import
-name|java
-operator|.
-name|util
-operator|.
-name|Map
-import|;
-end_import
-
-begin_import
-import|import
-name|java
-operator|.
-name|util
-operator|.
-name|Properties
-import|;
-end_import
-
-begin_import
-import|import
-name|java
-operator|.
-name|util
-operator|.
-name|concurrent
-operator|.
-name|TimeUnit
-import|;
-end_import
-
-begin_import
-import|import
 name|org
 operator|.
 name|apache
@@ -159,6 +97,22 @@ operator|.
 name|common
 operator|.
 name|SolrException
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|common
+operator|.
+name|cloud
+operator|.
+name|DocCollection
 import|;
 end_import
 
@@ -273,6 +227,68 @@ operator|.
 name|util
 operator|.
 name|ContentStream
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|io
+operator|.
+name|IOException
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|Collection
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|Iterator
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|Map
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|Properties
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|concurrent
+operator|.
+name|TimeUnit
 import|;
 end_import
 
@@ -583,6 +599,11 @@ specifier|protected
 name|Boolean
 name|autoAddReplicas
 decl_stmt|;
+DECL|field|stateFormat
+specifier|protected
+name|Integer
+name|stateFormat
+decl_stmt|;
 DECL|method|Create
 specifier|public
 name|Create
@@ -739,6 +760,22 @@ operator|=
 name|repl
 expr_stmt|;
 block|}
+DECL|method|setStateFormat
+specifier|public
+name|void
+name|setStateFormat
+parameter_list|(
+name|Integer
+name|stateFormat
+parameter_list|)
+block|{
+name|this
+operator|.
+name|stateFormat
+operator|=
+name|stateFormat
+expr_stmt|;
+block|}
 DECL|method|getConfigName
 specifier|public
 name|String
@@ -817,6 +854,16 @@ parameter_list|()
 block|{
 return|return
 name|autoAddReplicas
+return|;
+block|}
+DECL|method|getStateFormat
+specifier|public
+name|Integer
+name|getStateFormat
+parameter_list|()
+block|{
+return|return
+name|stateFormat
 return|;
 block|}
 DECL|method|getProperties
@@ -992,7 +1039,6 @@ operator|!=
 literal|null
 condition|)
 block|{
-comment|// OverseerCollectionProcessor.REPLICATION_FACTOR
 name|params
 operator|.
 name|set
@@ -1051,6 +1097,25 @@ argument_list|(
 name|params
 argument_list|,
 name|properties
+argument_list|)
+expr_stmt|;
+block|}
+if|if
+condition|(
+name|stateFormat
+operator|!=
+literal|null
+condition|)
+block|{
+name|params
+operator|.
+name|set
+argument_list|(
+name|DocCollection
+operator|.
+name|STATE_FORMAT
+argument_list|,
+name|stateFormat
 argument_list|)
 expr_stmt|;
 block|}
